force-app/main/default/objects/Quota__c/Quota__c.object-meta.xml
<CustomObject>
    <description>Stores quota targets and achievement tracking for participants, linked to comp plans, territories, and plan years.</description>
    <label>Quota</label>
    <nameField>
        <displayFormat>QT-{00000}</displayFormat>
        <label>Quota Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quotas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>