force-app/main/default/objects/Quota__c/fields/Achieved_Amount__c.field-meta.xml
<CustomField>
    <fullName>Achieved_Amount__c</fullName>
    <description>The achieved amount against this quota.</description>
    <label>Achieved Amount</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>