force-app/main/default/objects/Quota__c/fields/Adjustment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Adjustment_Amount__c</fullName>
    <description>Manual adjustment amount applied to this quota.</description>
    <label>Adjustment Amount</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>