force-app/main/default/objects/Quota__c/fields/Adjustment_Reason__c.field-meta.xml
<CustomField>
    <fullName>Adjustment_Reason__c</fullName>
    <description>Reason for the quota adjustment.</description>
    <label>Adjustment Reason</label>
    <type>Text</type>
    <length>255</length>
</CustomField>