force-app/main/default/objects/Quota__c/fields/Comp_Plan__c.field-meta.xml
<CustomField>
    <fullName>Comp_Plan__c</fullName>
    <description>The comp plan this quota is associated with.</description>
    <label>Comp Plan</label>
    <type>Lookup</type>
    <referenceTo>Comp_Plan__c</referenceTo>
    <relationshipLabel>Quotas</relationshipLabel>
    <relationshipName>Quotas_Plan</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>