force-app/main/default/objects/Quota__c/fields/Fiscal_Year__c.field-meta.xml
<CustomField>
    <fullName>Fiscal_Year__c</fullName>
    <description>The fiscal year this quota belongs to.</description>
    <label>Fiscal Year</label>
    <type>Text</type>
    <length>10</length>
</CustomField>