force-app/main/default/objects/Quota__c/fields/Metric__c.field-meta.xml
<CustomField>
    <fullName>Metric__c</fullName>
    <description>The metric this quota measures.</description>
    <label>Metric</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Primary</fullName>
            </value>
            <value>
                <fullName>Secondary</fullName>
            </value>
            <value>
                <fullName>Custom_1</fullName>
            </value>
            <value>
                <fullName>Custom_2</fullName>
            </value>
            <value>
                <fullName>Custom_3</fullName>
            </value>
            <value>
                <fullName>Custom_4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>