force-app/main/default/objects/Quota__c/fields/Parent_Quota__c.field-meta.xml
<CustomField>
    <fullName>Parent_Quota__c</fullName>
    <description>Reference to the parent quota for hierarchical quota structures.</description>
    <label>Parent Quota</label>
    <type>Lookup</type>
    <referenceTo>Quota__c</referenceTo>
    <relationshipLabel>Child Quotas</relationshipLabel>
    <relationshipName>Child_Quotas</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>