force-app/main/default/objects/Quota__c/fields/Participant__c.field-meta.xml
<CustomField>
    <fullName>Participant__c</fullName>
    <description>The user/participant this quota is assigned to.</description>
    <label>Participant</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Quotas</relationshipLabel>
    <relationshipName>Quotas_User</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>