force-app/main/default/objects/Quota__c/fields/Period_Label__c.field-meta.xml
<CustomField>
    <fullName>Period_Label__c</fullName>
    <description>Descriptive label for the quota period.</description>
    <label>Period Label</label>
    <type>Text</type>
    <length>50</length>
</CustomField>