force-app/main/default/objects/Quota__c/fields/Period_Start__c.field-meta.xml
<CustomField>
    <fullName>Period_Start__c</fullName>
    <description>Start date of the quota period.</description>
    <label>Period Start</label>
    <type>Date</type>
</CustomField>