force-app/main/default/objects/Quota__c/fields/Plan_Year__c.field-meta.xml
<CustomField>
    <fullName>Plan_Year__c</fullName>
    <description>The plan year this quota belongs to.</description>
    <label>Plan Year</label>
    <type>Lookup</type>
    <referenceTo>Plan_Year__c</referenceTo>
    <relationshipLabel>Quotas</relationshipLabel>
    <relationshipName>Quotas_Year</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>