force-app/main/default/objects/Quota__c/fields/Quota_Template__c.field-meta.xml
<CustomField>
    <fullName>Quota_Template__c</fullName>
    <description>The quota template this quota is based on.</description>
    <label>Quota Template</label>
    <type>Lookup</type>
    <referenceTo>Quota_Template__c</referenceTo>
    <relationshipLabel>Quota Assignments</relationshipLabel>
    <relationshipName>Quota_Assignments</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>