force-app/main/default/objects/Quota__c/fields/Territory__c.field-meta.xml
<CustomField>
    <fullName>Territory__c</fullName>
    <description>The territory this quota is associated with.</description>
    <label>Territory</label>
    <type>Lookup</type>
    <referenceTo>Territory__c</referenceTo>
    <relationshipLabel>Quotas</relationshipLabel>
    <relationshipName>Quotas_Territory</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>